--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactive-directive",
   "version": "0.1.0",
-  "homepage": "https://bohdicave.github.io/Reactive-Directive/public/",
+  "homepage": "https://bohdicave.github.io/Reactive-Directive",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
